docs(@cubejs-docs/site): ensure codeblocks are visible when JavaScript is disabled

--- a/docs/static/styles/variables.scss
+++ b/docs/static/styles/variables.scss
@@ -12,6 +12,7 @@ $lighter: #F3F3FB4D;
 
 
 $body-background-color: #2B2E31;
+$code-background-color: #43436B;
 
 $header-max-height: 4rem;
 
